# python-project-template

./: .pre-commit-config.yaml  pyproject.toml
